Updated with my resume

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <h2>Welcome to My Portfolio</h2>
-        <p>Data Scientist passionate about turning data into actionable insights and building innovative solutions</p>
+        <p>Software Engineer specializing in computer vision and automation, driving impactful solutions across industries</p>
     </section>
 
     <!-- About Me Section -->
@@ -160,60 +160,68 @@
         <h2>About Me</h2>
         <div class="about-content">
             <p>
-                I'm a data science professional with a passion for solving complex problems through data analysis, 
-                machine learning, and statistical modeling. With experience in various industries, I specialize in 
-                extracting meaningful insights from data and building predictive models that drive business decisions.
+                I'm a Software Engineer specializing in computer vision and automation, driving impactful solutions across industries. 
+                With extensive experience in AI/ML, OCR systems, and development, I focus on building intelligent systems 
+                that solve real-world problems with high accuracy and efficiency.
             </p>
             <p style="margin-top: 1rem;">
-                My approach combines technical expertise with strong communication skills to translate complex 
-                analytical findings into actionable recommendations for stakeholders.
+                I hold a Master of Science in Computer Science from Sharif University of Technology and a Bachelor of Science in Physics 
+                from K.N.T University of Technology. My work spans from developing LLM-powered document analysis systems to creating 
+                real-time neural network classifiers.
             </p>
         </div>
     </section>
 
     <!-- Skills Section -->
     <section id="skills">
-        <h2>Skills</h2>
+        <h2>Technical Skills</h2>
         <div class="skills-grid">
             <div class="skill-card">
                 <h3>Programming Languages</h3>
                 <ul>
                     <li>Python</li>
-                    <li>R</li>
-                    <li>SQL</li>
                     <li>JavaScript</li>
+                    <li>SQL</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
                 </ul>
             </div>
 
             <div class="skill-card">
-                <h3>Machine Learning</h3>
+                <h3>AI/ML Technologies</h3>
                 <ul>
-                    <li>Scikit-learn</li>
-                    <li>TensorFlow</li>
                     <li>PyTorch</li>
-                    <li>XGBoost</li>
+                    <li>TensorFlow</li>
+                    <li>OpenCV</li>
+                    <li>OCR</li>
+                    <li>NLP</li>
+                    <li>LLMs</li>
+                    <li>LangChain</li>
+                    <li>n8n</li>
                 </ul>
             </div>
 
             <div class="skill-card">
-                <h3>Data Analysis & Visualization</h3>
+                <h3>Development Tools</h3>
                 <ul>
+                    <li>AWS (S3, Lambda)</li>
+                    <li>Docker</li>
+                    <li>Git</li>
+                    <li>Django</li>
+                    <li>React</li>
+                    <li>Nginx</li>
+                </ul>
+            </div>
+
+            <div class="skill-card">
+                <h3>Data Science</h3>
+                <ul>
+                    <li>Dataset Creation</li>
+                    <li>Data Analysis</li>
+                    <li>Optimization</li>
                     <li>Pandas</li>
                     <li>NumPy</li>
                     <li>Matplotlib</li>
-                    <li>Seaborn</li>
-                    <li>Tableau</li>
-                    <li>Power BI</li>
-                </ul>
-            </div>
-
-            <div class="skill-card">
-                <h3>Big Data & Tools</h3>
-                <ul>
-                    <li>Apache Spark</li>
-                    <li>Hadoop</li>
-                    <li>Git</li>
-                    <li>Docker</li>
                 </ul>
             </div>
         </div>
